--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
   },
   "homepage": "https://github.com/varyzheng/nodava#readme",
   "devDependencies": {
-    "eslint": "^5.15.3",
-    "eslint-config-google": "^0.12.0"
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-google": "^0.12.0",
+    "eslint-plugin-import": "^2.16.0"
   }
 }
